--- a/section_Gradient_Boosting_Variation_subection__.tex
+++ b/section_Gradient_Boosting_Variation_subection__.tex
@@ -50,12 +50,17 @@ Obj_t(\Theta) = \sum_i^n l(y_t^i,\hat{y_t}^i)) +   \sum_k^t R(f_k) \\
 
 where $c(t)$ and $c'(t)$ are constants for fixed $t$. Approximating by a second order Taylor approximation yields
 \[
-Obj_t(\Theta) = \sum_i^n l(y_^i, \hat{y}_{t-1}^i +  f_t(x^i) ) +   c(t) + R(f_t) \\
-
-= \sum_i^n {l(y_^i, \hat{y}_{t-1}^i) + g^if_t(x^i) + \frac{1}{2}h^if_t(x^i)^2 } +  R(f_t) c'(t)
+    Obj_t(\Theta) = \sum_i^n l(y_^i, \hat{y}_{t-1}^i +  f_t(x^i) ) +   c(t) + R(f_t) \\
+    = \sum_i^n {l(y_^i, \hat{y}_{t-1}^i) + g^if_t(x^i) + \frac{1}{2}h^if_t(x^i)^2 } +  R(f_t) c'(t)
 %= \sum_i^n {2(y_^i -(\hat{y}_{t-1}^i +  f_t(x^i)) )} + (\hat{y}_{t-1}^i +  f_t(x^i))^2 +  f_t + c'(t)
 \]
 
+
+
+\[
+    Err_{true}(\theta)  = \Expect_{ \mathrm{T}}[(\textbf{y} - h(\textbf{x} \cdot \theta) )^2] \\
+    = \int (y - h(x \cdot \theta) )^2 p(x,y)dxdy
+\]
 %\sum_{i=0}^{\infty} a_i x^i 
 
 %\end{equation}
