--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -41,18 +41,18 @@ Consider $t$ the step indexer of the algorithm, where $t \in {0,..,K}$. In step 
 \end{equation}
 where each trees is added in such a way that we are minimizing
 
-\begin{equation} \label{eq:gb-objSteps1}
-%\[
-%Obj_t(\Theta) = \sum_i^n l(y^i,\hat{y_t}^i)) +   \sum_k^t R(f_k) \\
+%\begin{equation} \label{eq:gb-objSteps1}
+\[
+Obj_t(\Theta) = \sum_i^n l(y^i,\hat{y_t}^i)) +   \sum_k^t R(f_k) \\
 = \sum_i^n l(y^i,\hat{y}_{t-1}^i +  f_t(x^i) ) +   c(t) + R(f_t) \\
 %= \sum_i^n {2(y^i -(\hat{y}_{t-1}^i +  f_t(x^i)) )} + (\hat{y}_{t-1}^i +  f_t(x^i))^2 +  f_t + c'(t)
-%\]
-\end{equation}
+\]
+%\end{equation}
 
 where $c(t)$ and $c'(t)$ are constants for fixed $t$. Approximating by a second order Taylor approximation yields
 \[
-    Obj_t(\Theta) = \sum_i^n l(y_^i, \hat{y}_{t-1}^i +  f_t(x^i) ) + c(t) + R(f_t) \\
-    %= \sum_i^n {l(y_^i, \hat{y}_{t-1}^i) + g^i f_t(x^i) + \frac{1}{2} h^i f_t(x^i)^2 } +  R(f_t) c'(t)
+    Obj_t(\Theta) = \sum_i^n l(y^i, \hat{y}_{t-1}^i +  f_t(x^i) ) + c(t) + R(f_t) \\
+    = \sum_i^n {l(y_^i, \hat{y}_{t-1}^i) + g^i f_t(x^i) + \frac{1}{2} h^i f_t(x^i)^2 } +  R(f_t) c'(t)
 %= \sum_i^n {2(y_^i -(\hat{y}_{t-1}^i +  f_t(x^i)) )} + (\hat{y}_{t-1}^i +  f_t(x^i))^2 +  f_t + c'(t)
 \]
 
