--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -58,7 +58,7 @@ where $c(t)$ and $c'(t)$ are constants for fixed $t$. Approximating by a second 
 
 where $g^i$ and $h^i$ are first and second order approximations of the loss function.
 \[
-    g^i =  \frac{\partial l(y^i, \hat{y}_{t-1}^i)}{\partial \hat{y}_{t-1}^i}
+    g^i =  \frac{\partial l(y^i, \hat{y}_{t-1}^i)}{\partial \hat{y}_{t-1}^i} \\
     h^i =  \frac{\partial^2 l(y^i, \hat{y}_{t-1}^i)}{\partial (\hat{y}_{t-1}^i)^2 }
 \]
 
