--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -102,7 +102,7 @@ as our best fit parameter and
   
 \]
 
-as our minimum objective value. In this context, we call this value the \textbf{gain]. Since it is the improvement brought on to the ensemble by tree $f_t$. It is a measure or score of how performing a $q(x)$ tree scoring is.   
+as our minimum objective value. In this context, we call this value the \textbf{gain}. Since it is the improvement brought on to the ensemble by tree $f_t$. It is a measure or score of how performing a $q(x)$ tree scoring is.   
 
 \subection{sklearn}
 
