--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -21,7 +21,7 @@ When building a model of ensemble trees, a higher model will be learning on othe
 
 A tree is represented in the form 
 \[
-$f(x) = \theta_{q(x)} = \sum_{j=1}^J \theta_j I(x \in  R_j)$
+f(x) = \theta_{q(x)} = \sum_{j=1}^J \theta_j I(x \in  R_j)
 \]
 with $\theta_j \in \mathbb{R} \forall j \in {1,...,J}$ and $ \coprod_{j=1}^J R_j$ a partition of features space. Here $q : X \mapsto {1,...,J}$ is the function that maps samples to regions. 
 
