--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -21,9 +21,9 @@ When building a model of ensemble trees, a higher model will be learning on othe
 
 with $K$ a hyper-parameter. A single tree is represented in the form 
 \[
-f(x) = \theta_{q(x)} = \sum_{j=1}^J \theta_j I(x \in  R_j)
+f(x) = \theta_{q(x)} = \sum_{j=1}^J \theta_j I(x \in  \Pi_j)
 \]
-with $\theta_j \in \mathbb{R} \ \forall j = 1,...,J$ and $ \coprod_{j=1}^J R_j$ is a partition of feature space. Here $q : X \mapsto \{1,...,J\}$ is the function that maps samples to regions. In summary, $\{\theta_j, R_j\}_{j=1}^J$ are the model's parameters and $J$ is a hyper-parameter.
+with $\theta_j \in \mathbb{R} \ \forall j = 1,...,J$ and $ \coprod_{j=1}^J R_j$ is a partition of feature space. Here $q : X \mapsto \{1,...,J\}$ is the function that maps samples to regions. In summary, $\{\theta_j, \Pi_j\}_{j=1}^J$ are the model's parameters and $J$ is a hyper-parameter.
 
 The objective function would account for these relationships in the trees and thus we would have that
  
