--- a/section_Gradient_Boosting_Variation_subsection__.tex
+++ b/section_Gradient_Boosting_Variation_subsection__.tex
@@ -3,6 +3,7 @@
 \subsection{Boosting Trees    }
 
 $\Theta$
+$\theta \theta \theta $
 
 The objective function differences minimization objectives. 
 
