--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -14,7 +14,7 @@ Notar que todo lo que esta en italica es tipo highlighter de textos de otros aut
 
 \begin{equation} \label{eq:rf-marginFun}
 
- mg(\textbf{x},\textbf{y}) = \frac{1}{K}  * \sum_{k=1}^K I(h_k(\textbf{x}) = \textbf{y})  
+ mg(\textbf{x},\textbf{y}) = \frac{1}{K}   \sum_{k=1}^K I(h_k(\textbf{x}) = \textbf{y})  
  - max_{j\neq \textbf{y}}(\frac{1}{K} \sum_{k=1}^K I(h_k(\textbf{x}) = j) ) 
 
 \end{equation}
