--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -44,7 +44,7 @@ Let $\{h_k(\textbf{x})\}_{i=1}^K$  \footnote{There is an abuse of notation by no
 
 \begin{equation} \label{eq:rf-marginFun}
 
- mg(\textbf{x},\textbf{y}) = \frac{1}{K}  * \sum_{k=1}^K I(h_k(\textbf{x}) = \textbf{y})  
+ mg(\textbf{x},\textbf{y}) = \frac{1}{K}  \sum_{k=1}^K I(h_k(\textbf{x}) = \textbf{y})  
  - max_{j\neq \textbf{y}}(\frac{1}{K} \sum_{k=1}^K I(h_k(\textbf{x}) = j) ) 
 
 \end{equation}
