--- a/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
+++ b/textbf_ACA_ARRANCAN_LAS_DESCRIPCIONES__.tex
@@ -52,7 +52,7 @@ Let $\{h_k(\textbf{x})\}_{i=1}^K$  \footnote{There is an abuse of notation by no
 The function measures, in average, how much do the trees vote for the correct class in comparison to all other classes.
 
 Then for this classifier, the generalization error will be given as 
-$P_{\textbf{x}}, \textbf{y} (mg(\textbf{x}}, \textbf{y}) < 0) $
+$P_{\textbf{x}}, \textbf{y} } (mg(\textbf{x}}, \textbf{y}) < 0) $
 
 
 
